--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.6",
@@ -21,5 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "zustand": "^4.3.2"
+  },
+  "devDependencies": {
+    "cypress": "^12.3.0"
   }
 }
