--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.1",
+    "@prisma/client": "^4.9.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^6.5.1",
@@ -24,6 +25,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
-    "cypress": "^12.3.0"
+    "cypress": "^12.3.0",
+    "prisma": "^4.9.0"
   }
 }
