--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.9.0",
+    "axios": "^1.2.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^6.5.1",
