--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-moment": "^1.1.3",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
