--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.11.0",
     "@supabase/supabase-js": "^2.12.1",
@@ -21,6 +22,7 @@
     "eslint-config-next": "13.1.1",
     "framer-motion": "^6.5.1",
     "next": "13.1.1",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
